--- a/landing3.html
+++ b/landing3.html
@@ -19,10 +19,10 @@
 		<div class="tagline">junior web Dev | Open-Source Enthusiast | Blogger | skater</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://github.com/QuentCn"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://stackoverflow.com"><i class="fab fa-stack-overflow"></i></a>
-			<a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a>
+			<a target="_blank" href="https://dev.to"><i class="fab fa-dev"></i></a>
 			<a target="_blank" href="https://medium.com"><i class="fab fa-medium"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/quentin-coene-701a03233/"><i class="fab fa-linkedin"></i></a>
     </div>
